
* Upload universal wheels to pypi during release.

* Refactored and simplified implementation of ``ConverterRegistry``.

* Bugfix: exception views in mounted apps weren't looked up correctly
  anymore.

* Adds compatibility with WebOb 1.7.

* Removed extra spaces after the colon in json.
  For example: {"foo": "bar"} is now {"foo":"bar"}.

0.16.1 (2016-10-04)
===================

* Adjust ``setup.py`` to require Reg 0.10 and Dectate 0.12, otherwise
  Morepath won't work properly.

0.16 (2016-10-04)
=================

Release highlights
------------------

* A new, cleaner and faster implementation of Reg underlies this
  version of Morepath. It turns generic functions into methods on the
  ``App`` class, and removes implicit behavior entirely.

  This has some impact if you used the low-level ``function``
  directive or if you defined your own predicates with the
  ``predicate`` and ``predicate_fallback`` directives, see details
  below.

* A new build environment based around virtualenv and pip. We've
  removed the old buildout-based build environment. ``doc/developing.rst``
  has much more.

* Performance work boosts performance of Morepath significantly.

Removals & Deprecations
-----------------------

- **Removed**: ``morepath.remember_identity`` is removed from the
  Morepath API.

  Use ::

    request.app.remember_identity(response, request, identity)

  Instead of ::

    remember_identity(response, request, identity, lookup=request.lookup)

- **Removed**: ``morepath.forget_identity`` is removed from the
  Morepath API.

  Use ::

    request.app.forget_identity(response, request)

  Instead of ::

    morepath.forget_identity(response, request, lookup=request.lookup)

- **Removed** ``morepath.settings`` is removed from the Morepath API.

  Use the ``morepath.App.settings`` property instead. You can access
  this through ``app.settings``. You can access this through
  ``request.app.settings`` if you have the request. The following